# arabic_text_justification

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml  pubspec_overrides.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/arabic_text_justification_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/flutter_arabic_justification_example/: MainActivity.kt
example/ios/Flutter/: Debug.xcconfig  Release.xcconfig
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: bitmap_page.dart  block_page.dart  common.dart  hidden_page.dart  main.dart  mushaf_page.dart  outline_page.dart  tajweed_page.dart  widget_page.dart  word_progress_page.dart
example/lib/constants/: constants.dart  tajweed.dart
example/lib/mixins/: ayah_selection_mixin.dart  debounced_slider_mixin.dart  playback_mixin.dart
example/lib/models/: playback.dart
example/lib/widgets/: labeled_switch_row.dart  playback_controls.dart  scrollable_page.dart  slider_header.dart  tajweed_legend.dart
ios/: arabic_text_justification.podspec  flutter_arabic_justification.podspec
ios/Classes/: arabic_text_justification.h  arabic_text_justification.mm
ios/Frameworks/arabic_text_justification.xcframework/: Info.plist
lib/: arabic_text_justification.dart  flutter_arabic_justification.dart
lib/src/: arabic_text_justification.dart  bundled_fonts.dart  models.dart  native_structs.dart  painter.dart
lib/src/ffi/: native_api.dart  native_structs.dart
lib/src/models/: models.dart  word_color_span.dart  word_progress.dart
lib/src/widgets/: justified_arabic_bitmap_line.dart  justified_arabic_block.dart  justified_arabic_line.dart  line_common.dart  painter.dart
native/: CMakeLists.txt  FindFreetype.cmake
native/ios/: CMakeLists.txt
scripts/: build_android.sh  build_ios.sh
src/: harfbuzz_wrapper.cpp  harfbuzz_wrapper.h
